--- a/index.html
+++ b/index.html
@@ -46,31 +46,31 @@
         <div class="storyGrid">
 <div class="lead">
     <img src="images/space2.jpg" alt="rocket">
-    <span>Rocket</span>
+    <span>Starship Flight Test</span>
 </div>
 <div class="pics">
     <img src="images/pics0.jpg" alt="loco">
-    <span>"The amazing Rocket"</span>
+    <span>"How Sofia Vergara Responded To Critism Of Her Accent"</span>
 </div>
 <div class="pics">
-    <img src="images/pics01.jpg" alt="loco">
-    <span>"The amazing Rocket"</span>
+    <img src="images/pics11.jpg" alt="loco">
+    <span>"Elon Musk Opening a Tesla Plant in Mexico"</span>
 </div>
 <div class="pics">
     <img src="images/pic03.jpg" alt="">
-    <span>"The amazing Rocket"</span>
+    <span>"All About Utah Snow Pack"</span>
 </div>
 <div class="pics">
-    <img src="images/pics04.jpg" alt="">
-    <span>"The amazing Rocket"</span>
+    <img src="images/pics08.jpg" alt="">
+    <span>"The Realy of Fast Fashion"</span>
 </div>
 <div class="pics">
-    <img src="images/pics05.jpg" alt="">
-    <span>"The amazing Rocket"</span>
+    <img src="images/pics01.jpg" alt="">
+    <span>"Tesla Cybertruck Deliveries Will Happen in 2023"</span>
 </div>
 <div class="pics">
     <img src="images/pics06.jpg" alt="">
-    <span>"The amazing Rocket"</span>
+    <span>"Meta to Lay Off Workers"</span>
 </div>
 
  </div>
