add padding fotter, fix clomn grid typos

--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     <footer>
         <div class="breakingnews">
 
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-        <p>Copyright &copy; 2022 Design Thinking Inc. All rights reserved. 
+            <p>HOME</p>
+            <p>ABOUT</p>
+            <p>CONTACT</p>
+            <p>HELP</p>
+            <p>CARRERS</p>
+            <p>PRIVACY POLICY</p>
+            <p>PRIVACY CHOICES</p>
+            <p>CA NOTICE</p>
+            <p>TERMS OF SERVICE</p>
+            <p>SANDRA NEWS</p>
+            <p>ADVERTISE</p>
+            <p>SHOPING</p>
+        
             <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a> | <a href="#">Sales</a> | <a href="#">Clients</a></p>
     </footer>
 </div> <!-- end footer wrapper -->
